# basenext-custom-app

./: README.md  hooks.py  pyproject.toml  setup.py
basenext/: install.py
erpnext_pos_extensions/: hooks.py  install.py  modules.txt  pyproject.toml
erpnext_pos_extensions/erpnext_pos_extensions/: install.py
erpnext_pos_extensions/erpnext_pos_extensions/events/: sales_invoice.py
erpnext_pos_extensions/erpnext_pos_extensions/public/css/: pos_extensions.css
erpnext_pos_extensions/events/: sales_invoice.py
erpnext_pos_extensions/fixtures/: client_script.json  custom_docperm.json  custom_field.json  letter_head.json  print_format.json
erpnext_pos_extensions/public/js/: pos_extensions.js
