[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_pos_extensions"
version = "0.1.0"
description = "Extensiones POS para ERPNext: vales, ticket regalo y personalizaciones BaseN"
authors = [
    { name = "Lyra Informática", email = "jmpascual@lyra-informatica.es" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.frappe]
app_name = "erpnext_pos_extensions"
app_title = "ERPNext POS Extensions - BaseN"
app_publisher = "Lyra Informática"
app_email = "jmpascual@lyra-informatica.es"
app_license = "MIT"
app_description = "Extensiones POS para ERPNext: vales, ticket regalo y personalizaciones BaseN"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = "git+https://github.com/frappe/erpnext@version-15"
